Adjust z-index of .content-marg to fix browser back display issues

--- a/_scss/3-default-components/_contentlayout.scss
+++ b/_scss/3-default-components/_contentlayout.scss
@@ -1,6 +1,6 @@
 .content-marg {
   margin-top: -90px;
-  z-index: 9996;
+  z-index: 9995;
   position: relative;
   background-color: $bgcolor;
 }
