--- a/css/main.css
+++ b/css/main.css
@@ -883,7 +883,7 @@ a.nowrap {
 
 .content-marg {
   margin-top: -90px;
-  z-index: 9996;
+  z-index: 9995;
   position: relative;
   background-color: white; }
 
